# yutto-uiya

./: .gitignore  .pre-commit-config.yaml  0.验证ffmpeg.bat  1.获取SESSDATA.bat  2.运行yutto-uiya.bat  README.md  _typo.toml  _typos.toml  entries.py  pyproject.toml  requirements.txt  webrowser_config.py  webui.py  yutto_uiya.yaml
SESS_DATA/: README.md  get_sessdata.py  requirements.txt
SESS_DATA/configs/: chrome.yaml
configs/: args.yaml  chrome.yaml
src/uiya/: __main__.py  __version__.py  _dataclass.py  _typing.py  api.py  requirements.txt
src/uiya/configs/: args.yaml
src/uiya/utils/: config.py
src/uiya/yutto/: bangumi.py  user_videos.py
src/yutto-uiya/: __main__.py  _typing.py
src/yutto-uiya/yutto/: __init__.py  bangumi.py
tests/: test_version.py
utils/: config.py  subproc.py
yutto/: __init__.py  bangumi.py  user_video.py
